# Data_analysis

./: README.md
back-end/: .env  Cargo.toml  Dockerfile  go.mod
back-end/migrations/2025-03-30-205853_create_users/: up.sql
back-end/src/: dataBase.rs  data_base.rs  main.go  main.rs
back-end/src/api/: task.rs
front-end/: package-lock.json  package.json  post.config.js  vite.config.js
front-end/src/: App.jsx  index.css
